# ChangeLog for dev-util/re2c
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/re2c/ChangeLog,v 1.70 2014/04/25 23:38:16 radhermit Exp $

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> -re2c-0.12.0.ebuild,
  -re2c-0.13.2.ebuild, -re2c-0.13.5.ebuild, -files/re2c-0.9.11-gcc41.patch:
  Remove old.

*re2c-0.13.6 (25 Apr 2014)

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> +re2c-0.13.6.ebuild:
  Version bump.

  11 Jun 2013; Markus Meier <maekke@gentoo.org> re2c-0.13.5-r1.ebuild:
  arm stable, bug #269129

  03 Mar 2013; Mike Frysinger <vapier@gentoo.org> re2c-0.13.5-r1.ebuild:
  Add s390 love.

  02 Sep 2012; Raúl Porcel <armin76@gentoo.org> re2c-0.13.5-r1.ebuild:
  alpha/ia64/sparc stable wrt #418963

  12 Aug 2012; Anthony G. Basile <blueness@gentoo.org> re2c-0.13.5-r1.ebuild:
  Stable ppc, bug #418963

  10 Aug 2012; Johannes Huber <johu@gentoo.org> re2c-0.13.5-r1.ebuild:
  Stable for x86, wrt bug #418963

  06 Aug 2012; Brent Baude <ranger@gentoo.org> re2c-0.13.5-r1.ebuild:
  Marking re2c-0.13.5-r1 ppc64 for bug 418963

  05 Aug 2012; Jeroen Roovers <jer@gentoo.org> re2c-0.13.5-r1.ebuild:
  Stable for HPPA (bug #418963).

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org> re2c-0.13.5-r1.ebuild:
  Stable for amd64, wrt bug #418963

*re2c-0.13.5-r1 (02 Feb 2012)

  02 Feb 2012; Sergei Trofimovich <slyfox@gentoo.org> +re2c-0.13.5-r1.ebuild:
  Cleanup ebuild: drop already applied patch, don't fix tarball permissions,
  switch to EAPI=4. Approved by robbat2.

  30 Mar 2011; Michael Weber <xmw@gentoo.org> re2c-0.13.5.ebuild:
  added ~arm (bug 302981)

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org> re2c-0.13.5.ebuild:
  Transfer Prefix keywords

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> re2c-0.12.0.ebuild,
  re2c-0.13.2.ebuild, re2c-0.13.5.ebuild:
  Remove virtual/libc

  29 Sep 2008; Jeroen Roovers <jer@gentoo.org> re2c-0.13.5.ebuild:
  Stable for HPPA (bug #236487).
