@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/re2c
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/re2c/ChangeLog,v 1.70 2014/04/25 23:38:16 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/re2c/ChangeLog,v 1.71 2014/06/10 00:22:40 vapier Exp $
+
+  10 Jun 2014; Mike Frysinger <vapier@gentoo.org> re2c-0.13.5-r1.ebuild,
+  re2c-0.13.6.ebuild:
+  Add arm64/m68k/sh love.
 
   25 Apr 2014; Tim Harder <radhermit@gentoo.org> -re2c-0.12.0.ebuild,
   -re2c-0.13.2.ebuild, -re2c-0.13.5.ebuild, -files/re2c-0.9.11-gcc41.patch:
